[project]
name = "auth-api-with-jwt"  
version = "0.1.0"
description = "JWT Authentication API built with FastAPI and SQLAlchemy"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
dotenv = ">=0.9.9"
fastapi = ">=0.128.0"
passlib = { version = ">=1.7.4", extras = ["argon2", "bcrypt"] }
psycopg = ">=3.3.2"
pyjwt = ">=2.11.0"
python-multipart = ">=0.0.22"
sqlalchemy = ">=2.0.46"
uvicorn = ">=0.40.0"
]